--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,8 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "nest start",
-    "build": "nest build"
+    "build": "nest build",
+    "start:dev": "ts-node -r tsconfig-paths/register src/main.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.20",
